theme color change

--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -9,7 +9,7 @@
 	--page-background: #212121;
 	--text-color: #ededed;
 	--panel-color: #212121;
-	--color-alpha: #50a8d8;
 	--hr-line:rgb(250,250,250,0.5);
 	--nav-color:#212121;
+	--hover-color:#2196F3;
 }
