add color to selection

--- a/src/css/light.css
+++ b/src/css/light.css
@@ -12,4 +12,6 @@
 	--hr-line:rgb(10,10,10,0.3);
 	--nav-color:silver;
 	--hover-color:#2196F3;
+	--selection-background-color:lightblue;
+	--selection-color:white;
 }
