--- a/src/css/blue.css
+++ b/src/css/blue.css
@@ -12,4 +12,6 @@
 	--hr-line:rgb(10,10,10,0.5);
 	--nav-color: #4daaf6;
 	--hover-color:white;
+	--selection-background-color:red;
+	--selection-color:white;
 }
