--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -12,4 +12,6 @@
 	--hr-line:rgb(250,250,250,0.5);
 	--nav-color:#212121;
 	--hover-color:#2196F3;
+	--selection-background-color:lightblue;
+	--selection-color:white;
 }
