--- a/src/css/dark.css
+++ b/src/css/dark.css
@@ -14,4 +14,8 @@
 	--hover-color:#2196F3;
 	--selection-background-color:lightblue;
 	--selection-color:white;
+
+	--theme-l1:#575757;
+	--theme-l2:#4e4e4e;
+	--theme-l3:#303030;
 }
